--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -516,6 +516,7 @@ details[open] summary ~ * {
 
     .project-box-desc {
         margin: 0 .5em;
+        width:100%;
         text-align: left;
     }
 
